# stm32_low_level_cpp

./: .gitignore  CMakeLists.txt  README.md  addresses.h  core_cm4.hpp  device_register.h  flash.hpp  general_purpose_io.hpp  ll_bus.hpp  ll_cortex.hpp  ll_gpio.hpp  ll_power.hpp  ll_rcc.hpp  ll_system.hpp  ll_utils.hpp  main.c  main.cpp  main.h  module.h  nested_vectored_interrupt_controller.hpp  power_control.hpp  reset_clock_control.h  st-ll-cpp20.qbs  startup.cpp  stm32_assert.h  stm32l4xx_it.c  stm32l4xx_it.cpp  stm32l4xx_it.h  system_control_block.h  system_stm32l4xx.cpp  system_timer.hpp  toolchain-gcc.cmake
STM32CubeL4/: CMakeLists.txt
STM32CubeL4/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l452xx.h  stm32l4xx.h
STM32CubeL4/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_ll_system.h
examples/nucleo-l452re/base_timer/: STM32L452RETx_FLASH.ld  main.cpp  source.cmake  startup.cpp  stm32l4xx_it.h  system_stm32l4xx.cpp
examples/nucleo-l452re/blinking_led/: main.cpp  source.cmake  system_stm32l4xx.cpp
examples/stm32f0308-discovery/base_timer/: main.cpp  source.cmake  startup.cpp  stm32f0xx_it.cpp  stm32f0xx_it.h
examples/stm32f0308-discovery/blinking_led/: main.cpp  source.cmake  system_stm32f0xx.cpp
ll/: CMakeLists.txt  addresses.h  bus.hpp  core.h  cortex.hpp  device_register.h  flash.hpp  frequency.h  general_purpose_io.hpp  gpio.cpp  gpio.h  hsi.h  msi.h  nested_vectored_interrupt_controller.hpp  pll.h  power.hpp  power_control.hpp  rcc.hpp  register_value.hpp  reset_clock_control.h  spinlock.hpp  system.hpp  timer.h  utils.hpp
ll/core/: cm4.hpp  irqs.h
ll/core/m0/: cm0.hpp  irqs.h
ll/core/m4/: cm4.hpp
ll/f0/30x8/: addresses.h
ll/f0/register/: flash.hpp  general_purpose_io.hpp  gpio_bus.h  nested_vectored_interrupt_controller.hpp  reset_clock_control.h  system_control_block.h  tim.hpp  timer.h
ll/gpio/: analog.cpp  analog.h  gpio.h  input.cpp  input.h  output.cpp  output.h  pin.cpp  pin.h
ll/l4/52/: addresses.h
ll/l4/register/: flash.hpp  gpio_bus.h  nested_vectored_interrupt_controller.hpp  power_control.hpp  reset_clock_control.h  system_control_block.h  system_timer.hpp  tim.hpp
